# pico-quad-usb-uart

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.picosdk  README.md
include/: app_uart.h  tusb_config.h
src/: CMakeLists.txt  main.c  uart_rx.pio  uart_tx.pio  usb_descriptors.c
